<resources>
    <string name="app_name">Quản lý nhà hàng</string>
    <string name="title_activity_home_client">HomeClientActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="access">Xác nhận</string>
    <string name="cancle">Hủy bỏ</string>
    <string name="name">Họ tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="position">Vị trí</string>
    <string name="email">Email</string>
    <string name="birth">Ngày sinh</string>
    <string name="day">Ngày:</string>
    <string name="month">Tháng:</string>
    <string name="year">Năm:</string>
    <string name="salary">Lương</string>
    <string name="time_start">Thời gian bắt đầu</string>
    <string name="time_end">Thời gian kết thúc</string>
    <string name="edit_info_employee">Sửa thông tin nhân viên</string>
    <string name="infomation_employee">Thông tin chi tiết</string>
    <string name="delete_employee_success">Xóa nhân viên thành công</string>
    <string name="delete_employee_fail">Xóa nhân viên thất bại</string>
    <string name="edit_employee_fail">Cập nhập thông tin thất bại. Vui lòng thử lại!</string>
    <string name="edit_employee_success">Cập nhập thông tin nhân viên thành công</string>
    <string name="register_acount_success">Đăng kí tài khoản thành công</string>
    <string name="exist_acount">Tài khoản đã tồn tại</string>
    <string name="error_upload_image">Lỗi tải hình ảnh! Vui lòng thử lại!</string>
    <string name="error_select_image">Chưa chọn ảnh đại diện</string>
    <string name="no_permistion_storage">Không cấp quyền đọc bộ nhớ ngoài!</string>
    <string name="no_enter_infomation">Chưa nhập đủ thông tin</string>
    <string name="notification">Thông báo</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="edit">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="export">Xuất</string>
    <string name="name_acount">Tên tài khoản</string>
    <string name="pass_acount">Mật khẩu</string>
    <string name="again_pass_acount">Nhập lại mật khẩu</string>
    <string name="special_character">Tên tài khoản chứa kí tự đặc biệt</string>
    <string name="special_email">Email chưa đúng định dạng</string>
    <string name="diference_pass">Nhập lại mật khẩu chưa trùng khớp</string>
    <string name="exits">Thoát</string>
    <string name="question_exits_app">Bạn có thực sự muốn thoát ứng dụng?</string>
    <string name="no_enter_number_table">Chưa nhập số bàn</string>
    <string name="manager_employee">Quản lý nhân viên</string>
    <string name="manager_menu">Quản lý thực đơn</string>
    <string name="manager_bill">Quản lý hóa đơn</string>
    <string name="manager_report">Báo cáo thống kê</string>
    <string name="error">Lỗi</string>
    <string name="no_enter_acount">Tài khoản không được để trống</string>
    <string name="no_enter_pass">Mật khẩu không được để trống</string>
    <string name="remember_pass">Nhớ mật khẩu</string>
    <string name="no_remember_pass">Bỏ nhớ mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="add_employee">Thêm nhân viên</string>
    <string name="list_employee">Danh sách nhân viên</string>
    <string name="pass_false">Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="name_user">Họ tên</string>
    <string name="note">Chú thích</string>
    <string name="select_image">Chọn ảnh</string>
    <string name="success">Thành công</string>
    <string name="no_internet">Không có kết nối mạng</string>
    <string name="ok">Ok</string>
    <string name="bill">Hóa đơn</string>
    <string name="menu">Thực đơn</string>
    <string name="select_table">Chọn bàn</string>
    <string name="profile">Thông tin cá nhân</string>
    <string name="news">Bảng tin</string>
    <string name="bill_pay">Hóa đơn đã thanh toán</string>
    <string name="log_out">Đăng xuất</string>
    <string name="enter_people">Nhập số người:</string>
    <string name="number_people">Số người</string>
    <string name="number_table">Bàn số</string>
    <string name="employee">Nhân viên</string>
    <string name="manager">Người quản lý</string>
    <string name="customer">Khách hàng</string>
    <string name="id_bill">Mã hóa đơn: </string>
    <string name="total_money">Tổng tiền: </string>
    <string name="date_create">Ngày lập: </string>
    <string name="employee_create">Tên nhân viên: </string>
    <string name="menu_call">Danh sách món ăn</string>
    <string name="number_people_chart">Số khách</string>
    <string name="money">Thu nhập</string>
    <string name="table_report">Hóa đơn chờ thanh toán</string>

</resources>
