<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:text="Who are you?"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="40sp"/>
    <Button
        android:id="@+id/btnClient"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_backround_login"
        android:text="@string/customer"/>
    <Button
        android:id="@+id/btnEmployee"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_backround_login"
        android:text="@string/employee"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btnAdmin"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_backround_login"
        android:text="@string/manager"/>
</LinearLayout>