<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#512DA8">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scrollbars="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="30sp"
                android:textColorHint="#FFFFFF"
                android:layout_marginRight="30sp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtUserUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/name_acount"
                    android:textColor="#FFFFFF"
                    android:maxLines="1"
                    android:drawablePadding="10sp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:textColorHint="#FFFFFF"
                android:layout_marginRight="30sp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtPassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/pass_acount"
                    android:textColor="#FFFFFF"
                    android:maxLines="1"
                    android:drawablePadding="10sp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:textColorHint="#FFFFFF"
                android:layout_marginRight="30sp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/name_user"
                    android:textColor="#FFFFFF"
                    android:maxLines="1"
                    android:drawablePadding="10sp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:textColorHint="#FFFFFF"
                android:layout_marginRight="30sp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/address"
                    android:textColor="#FFFFFF"
                    android:maxLines="1"
                    android:drawablePadding="10sp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:textColorHint="#FFFFFF"
                android:layout_marginRight="30sp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/phone"
                    android:textColor="#FFFFFF"
                    android:maxLines="1"
                    android:drawablePadding="10sp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:textColorHint="#FFFFFF"
                android:layout_marginRight="30sp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textColor="#FFFFFF"
                    android:maxLines="1"
                    android:drawablePadding="10sp"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imgAnhDaiDien"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:visibility="gone"
                    />
                <Button
                    android:id="@+id/btnSelectImage"
                    android:layout_width="200sp"
                    android:layout_height="50sp"
                    android:text="@string/select_image"
                    android:background="@android:color/holo_blue_bright"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:textColorHint="#FFFFFF"
                android:layout_marginRight="30sp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/note"
                    android:textColor="#FFFFFF"
                    android:maxLines="1"
                    android:drawablePadding="10sp"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <Button
                    android:id="@+id/btnXacNhan"
                    android:layout_width="200sp"
                    android:layout_height="70sp"
                    android:text="@string/access"
                    android:background="@android:color/holo_blue_bright"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>