<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#512DA8">

    <ImageView
        android:layout_marginTop="50sp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30sp"
        android:textColorHint="#FFFFFF"
        android:layout_marginRight="30sp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name_acount"
            android:textColor="#FFFFFF"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_group_black_24dp"
            android:drawablePadding="10sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:textColorHint="#FFFFFF">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtPass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_acount"
            android:textColor="#FFFFFF"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="10sp"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="right"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150sp"
            android:text="@string/remember_pass"
            android:gravity="center|right"
            android:textStyle="italic|bold"
            android:textColor="#FFFFFF"
            android:layout_height="match_parent" />
        <CheckBox
            android:layout_width="40sp"
            android:id="@+id/ckNhoMatKhau"
            android:layout_marginRight="20sp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <Button
        android:id="@+id/btnLogin"
        android:textColor="@android:color/white"
        android:background="@drawable/background_btn_login"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:padding="15dp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRegister"
        android:textColor="@android:color/white"
        android:background="@drawable/background_btn_login"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:padding="15dp"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
