<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/infomation_employee"
            android:textColor="@android:color/white"
            android:background="#3E2723"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>
    </android.support.v7.widget.CardView>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="horizontal"
    android:layout_marginTop="?actionBarSize"
    android:layout_marginBottom="50sp"
    android:padding="7sp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="7sp">



    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imgProfileDL"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginLeft="5sp"
        android:src="@drawable/background"
        app:civ_border_width="2dp"
        android:layout_marginBottom="10sp"
        app:civ_border_color="#FF000000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/background_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/name"
            android:gravity="center|left" />
        <TextView
            android:id="@+id/txtTenDL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="15sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/background_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/email"
            android:gravity="center|left"/>
        <TextView
            android:id="@+id/txtEmailDL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="15sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/background_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/phone"
            android:gravity="center|left"/>
        <TextView
            android:id="@+id/txtPhoneDL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="15sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/background_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/address"
            android:gravity="center|left" />
        <TextView
            android:id="@+id/txtAddressDL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="15sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/background_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/birth"
            android:gravity="center|left" />
        <TextView
            android:id="@+id/txtBirthDL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="15sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/background_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/position"
            android:gravity="center|left"/>
        <TextView
            android:id="@+id/txtPositionIdDL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="15sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/background_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/salary"
            android:gravity="center|left"/>
        <TextView
            android:id="@+id/txtSalaryDL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text=""
            android:gravity="center|left"
            android:paddingLeft="15sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/background_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/time_start"
            android:gravity="center|left"/>
        <TextView
            android:id="@+id/txtTimeStartDL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="15sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/background_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/time_end"
            android:gravity="center|left"/>
        <TextView
            android:id="@+id/txtTimeFinishDL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center|left"
            android:paddingLeft="15sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="@android:color/background_dark"/>

</LinearLayout>
</ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/btnXacNhanDL"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:text="@string/access"
            android:background="@android:color/holo_blue_bright"/>
    </LinearLayout>
</FrameLayout>